[metadata]
name = traio
version = attr: traio.__version__
description = A simple asyncio wrapper attempting to look like Trio
url = https://github.com/RouquinBlanc/traio/
author = Jonathan Martin
author_email = therouquinblanc@gmail.com
long_description = file: README.md
keywords = asyncio, nursery, trio, even loop
license = MIT
Requires-Python: >=3.5
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  typing; python_version<"3.6"

[mypy]
ignore_missing_imports=1
follow_imports=silent

[flake8]
max-line-length = 100
exclude = doc/*,build/*,.tox,.eggs
max-complexity = 7

[pylint]

[tool:pytest]
addopts = -rsxX -q
testpaths = tests
